tests/ui/struct_flatten.stderr
error: proc-macro derive panicked
  --> $DIR/struct_flatten.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: flatten is only allowed on fields
